<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="com.vp.mplayerl.activities.PlaybackActivity">

    <item
        android:id="@+id/playback_track_info"
        android:orderInCategory="100"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:title="@string/playback_info"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_playlist"
        android:orderInCategory="99"
        android:icon="@mipmap/ic_playlist_red_black"
        android:title="@string/playlist_string"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search_lyrics"
        android:orderInCategory="101"
        android:title="@string/search_lyrics"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search_lyrics_extended"
        android:orderInCategory="102"
        android:title="@string/search_lyrics_extended"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_lyric_search_debug"
        android:orderInCategory="103"
        android:title="Lyriikkaetsinnän loki"
        app:showAsAction="never" />

</menu>