<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.vp.mplayerl.ArtistListMethods">
    <!--<item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />-->
    <item
        android:id="@+id/action_playback"
        android:orderInCategory="100"
        android:icon="@mipmap/note_white_250x250"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_playlist"
        android:orderInCategory="99"
        android:icon="@mipmap/ic_playlist_white_red"
        android:title="@string/playlist_string"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_play_all"
        android:orderInCategory="101"
        android:icon="@mipmap/shuffle"
        android:title="@string/play_all"
        app:showAsAction="ifRoom" />
</menu>
